Added first steps

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello World
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8" />
+    <title>YIPPIE</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+    <button id="playButton">▶️</button>
+
+    <div class="road">
+        <div class="kart hidden" id="kart"></div>
+        <div class="item-box hidden" id="itemBox"></div>
+    </div>
+
+    <div class="item-roulette" id="itemRoulette">
+        <div class="item-strip" id="itemStrip">
+        <!-- Wiederholung für "Dreheffekt" -->
+        <img src="https://img.game8.co/4180325/d7a8f242eb8ee71b600458edbba9f0f7.png/show" alt="Pilz" />
+        <img src="https://img.game8.co/4180324/f93dbec3813d79dbc2ba908d50e214a6.png/show" alt="Panzer" />
+        <img src="https://img.game8.co/4180309/7a0b6e1624b32fd0f1a65fd81f168e0b.png/show" alt="Banane" />
+        <img src="https://img.game8.co/4180322/a6177b58d4a84da79cfff1e54908e78b.png/show" alt="Stern" />
+        </div>
+    </div>
+
+    <div class="gutschein" id="gutschein">
+        🎉 Herzlichen Glückwunsch! <br />
+        🎁 OMG! <br />
+        🛍️ <strong>YIPPIE</strong>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
