Final commit? gigl

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="item-roulette" id="itemRoulette">
         <div class="item-strip" id="itemStrip">
         <!-- Wiederholung für "Dreheffekt" -->
+        <img src="preis.png" alt="Preis" />
         <img src="https://img.game8.co/4180325/d7a8f242eb8ee71b600458edbba9f0f7.png/show" alt="Pilz" />
         <img src="https://img.game8.co/4180324/f93dbec3813d79dbc2ba908d50e214a6.png/show" alt="Panzer" />
         <img src="https://img.game8.co/4180309/7a0b6e1624b32fd0f1a65fd81f168e0b.png/show" alt="Banane" />
@@ -25,9 +26,9 @@
     </div>
 
     <div class="gutschein" id="gutschein">
-        🎉 Herzlichen Glückwunsch! <br />
-        🎁 OMG! <br />
-        🛍️ <strong>YIPPIE</strong>
+        <strong>Happy Birthday meine maus &lt;3</strong> <br />
+        <strong>Ich lege dir 150€ zu deiner Switch 2 dazu!!</strong> <br />
+        <strong>YIPPIE</strong>
     </div>
 
     <script src="script.js"></script>
